# qpSolve

./: CMakeLists.txt  LICENSE  README.md
qpSolve/: CMakeLists.txt  Constraint.cpp  Constraint.h  Model.cpp  Model.h  ModelBuilder.cpp  ModelBuilder.h  Solution.cpp  Solution.h  Solver.cpp  Solver.h  SolverSettings.cpp  SolverSettings.h  TwiceDiffFunction.cpp  TwiceDiffFunction.h
tests/: ConstraintTest.cpp  ContextLoads.cpp  ModelTest.cpp  SolverSettingsTest.cpp  SolverTest.cpp  TestFunctions.cpp  TestFunctions.h  TwiceDiffFunctionTest.cpp
